[package]
name = "ghosting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
kiss3d = "0.35.0"
log = "0.4.17"
